--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@
     line-height: 37px;
     letter-spacing: 0%;
     text-align: center;
+    margin-bottom: 24px;
 }
 .inspiration-subtitle{
     color: rgb(13, 19, 33);
@@ -169,5 +170,50 @@
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
 }
-/* Inspiration section end here */
 
+/* Inspiration section end here */
+/* Target section starts here */
+.target{
+    margin-top: 150px;
+}
+.card-container{
+    display: flex;
+    gap: 20px;
+    margin-top: 48px;
+}
+.card-box{
+    width: 284px;
+    height: 340px;
+    padding: 40px;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+}
+.languages{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.card-description{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: justify;
+}
+.learn-more{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+}
+/* Target section end here */
