--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
-
+*{
+    margin: 0;
+}
 /* common style for main-section */
 .create-margin{
     margin-left: 150px;
@@ -177,6 +179,7 @@
     margin-top: 150px;
 }
 .card-container{
+    width: 946px;
     display: flex;
     gap: 20px;
     margin-top: 48px;
@@ -221,8 +224,8 @@
 .hand-shake{
     background-image: linear-gradient(rgba(0, 0, 0, 0.2),
     rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('../assets/handshake.jpg');
-    width: 946px;
-    height: 313px;
+    width: 956px;
+    height: 250px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -285,4 +288,32 @@
     margin-bottom: 20px;
 }
 /* handshake section end here */
+
 /* Footer part starts here */
+.footer{
+    background-color:rgba(13, 19, 33, 0.03);
+    margin-top: 80px;
+    align-items: center;
+    padding: 80px 150px;
+}
+.commitment{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;   
+}
+.footer-section{
+    width: 946px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
+.icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
