--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
     font-weight: 800;
     line-height: 68px;
     text-align: center;
+    margin-bottom: 30px;
 }
 .banner-description{
     color: rgb(13, 19, 33);
@@ -35,6 +36,7 @@
     font-weight: 400;
     line-height: 26px;
     text-align: center;
+    margin-bottom: 30px;
 }
 .contact-btn{
     border-radius: 8px;
@@ -48,12 +50,12 @@
     line-height: 23px;
     text-align: center;
 }
-/* header part end here */
-
-/* main part starts here */
-.main-section{
-    
+.contact-btn:hover{
+    background-color: green;
+    cursor: pointer;
 }
+
+/* header part end here */
 
 /* Why web development section start here */
 .development{
@@ -140,12 +142,14 @@
 /* Inspiration section starts here */
 .Inspiration{
     margin-top: 90px;
-}
-.Inspiration-heading{
-    padding: 0 114px;
-    justify-content: center;
+    width: 946px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.Inspiration-heading{   
     margin-bottom: 48px;
+    text-align: center;
 }
 .inspiration-title{
     color: rgb(13, 19, 33);
@@ -153,8 +157,6 @@
     font-size: 32px;
     font-weight: 800;
     line-height: 37px;
-    letter-spacing: 0%;
-    text-align: center;
     margin-bottom: 24px;
 }
 .inspiration-subtitle{
@@ -163,8 +165,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
-    letter-spacing: 0%;
-    text-align: center;
 }
 .inspiration-img{
     padding: 20px;
@@ -177,6 +177,7 @@
 /* Target section starts here */
 .target{
     margin-top: 150px;
+    width: 946px;
 }
 .card-container{
     width: 946px;
@@ -184,12 +185,23 @@
     gap: 20px;
     margin-top: 48px;
 }
-.card-box{
+.card-box1{
     width: 284px;
-    height: 340px;
     padding: 40px;
     border-radius: 16px;
     background: rgba(255, 76, 30, 0.05);
+}
+.card-box2{
+    width: 284px;
+    padding: 40px;
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+}
+.card-box3{
+    width: 284px;
+    padding: 40px;
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
 }
 .languages{
     color: rgb(13, 19, 33);
@@ -206,7 +218,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
-    letter-spacing: 0%;
     text-align: justify;
 }
 .learn-more{
@@ -214,7 +225,7 @@
     font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 700;
-    line-height: 19px;
+    line-height: 29px;
     letter-spacing: 0%;
     text-align: left;
     text-decoration-line: underline;
@@ -243,6 +254,7 @@
     line-height: 36px;
     letter-spacing: 0%;
     text-align: center;
+    margin-bottom: 16px;
 }
 .support-subtitle{
     color: rgb(255, 255, 255);
@@ -295,6 +307,9 @@
     margin-top: 80px;
     align-items: center;
     padding: 80px 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .commitment{
     color: rgb(13, 19, 33);
@@ -307,8 +322,7 @@
 .footer-section{
     width: 946px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
     justify-content: space-between;
 }
 .icon{
